[project]
name = "tidycensus"
version = "0.0.5"
authors = [
  { name="Alistair Pattison", email="alistairpattison@gmail.com" },
]
description = "A Python wrapper for the U.S. Census Bureau API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["uv", "polars", "joblib", "rich"]

[project.urls]
Homepage = "https://github.com/alipatti/tidycensus"

