[project]
name = "tidycensus"
version = "0.0.9"
authors = [
  { name="Alistair Pattison", email="alistairpattison@gmail.com" },
]
description = "A Python wrapper for the U.S. Census Bureau API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "polars",
    "rich",
    "requests",
    "requests-cache>=1.2.1",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.12.3",
    "pytest>=8.3.5",
]

[project.urls]
Homepage = "https://github.com/alipatti/tidycensus"

[tool.ruff.lint]
select = ["D"]
ignore = ["D100"] # missing module docstring

pydocstyle.convention = "numpy"
per-file-ignores = { "tests/**/*.py" = ["D"] }
